Arreglo del paso de vista a vista (login switch)

--- a/prestamista/paginadeinicio/index.html
+++ b/prestamista/paginadeinicio/index.html
@@ -44,13 +44,13 @@
               <a class="nav-link js-scroll-trigger" href="#services">Recursos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#portfolio">Búsqueda Rapida</a>
+              <a class="nav-link js-scroll-trigger" href="#portfolio">Búsqueda Rápida</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contáctanos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="../login/loginold.html">Iniciar Sesión</a>
+              <a class="nav-link js-scroll-trigger" href="../login/login.html">Iniciar Sesión</a>
             </li>
           </ul>
         </div>
