Ahora si guardo los cambios que se hicieron ayer en la noche

--- a/prestamista/useregister/register.html
+++ b/prestamista/useregister/register.html
@@ -62,11 +62,10 @@
     <h3 class="fs-subtitle">Paso 2</h3>
     <input type="text" name="fname" placeholder="Nombre" />
     <input type="text" name="lname" placeholder="Apellido" />
-    <!--input type="text" name="genero" placeholder="Género" /-->
-    <select class="genero">
+    <select class="mb-2">
       <option>Masculino</option>
       <option>Femenino</option>
-      <option>Otro</option>
+      <option>Prefiero no compartirlo</option>
     </select>
     <input type="text" name="phone" placeholder="Teléfono" />
     <input type="text" name="occupation" placeholder="Ocupación" />
@@ -78,10 +77,10 @@
     <h2 class="fs-title">Datos personales</h2>
     <h3 class="fs-subtitle">Paso 3</h3>
     <!--input type="text" name="pais" placeholder="Pais" /-->
-    <select class="pais">
-      <option>Prueba1</option>
-      <option>Prueba2</option>
-      <option>Prueba3</option>
+    <select class="mb-2">
+      <option>País</option>
+      <option>El Salvador</option>
+      <option>Más por venir...</option>
     </select>
     <input type="text" name="departamente" placeholder="Departamento" />
     <input type="text" name="municipio" placeholder="Municipio" />
