--- a/vistasadmin/gestionbiblio/bibliomgmt.html
+++ b/vistasadmin/gestionbiblio/bibliomgmt.html
@@ -32,7 +32,7 @@
 </head>
 <body>
 <!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-danger fixed-top" id="mainNav">
+<nav class="navbar navbar-expand-lg navbar-dark bg-danger" id="mainNav">
 	<div class="container">
 		<a class="navbar-brand js-scroll-trigger" href="../gestionhome/home.html">Sistema Bibliotecario</a>
 		<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
