Arreglos en algunas vistas como la de busqueda avanzada

--- a/prestamista/busqueda/busqueda.html
+++ b/prestamista/busqueda/busqueda.html
@@ -30,7 +30,7 @@
   <body id="page-top">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-dark" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="../paginadeinicio/index.html">Sistema Bibliotecario</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -134,18 +134,19 @@
           </label>
           <label>
             <input type="checkbox" value="mapa">
-            <i class="fa fa-map-o" aria-hidden="true"></i>
+            <i class="fa fa-map" aria-hidden="true"></i>
             Mapas
           </label>
           <label>
             <input type="checkbox" value="matemixto">
+            <i class="fa fa-box" aria-hidden="true"></i>
             Materiales Mixtos
           </label>
         </div>
         <div class="checkbox">
           <label>
             <input type="checkbox" value="matvisu">
-            <i class="fa fa-video-camera" aria-hidden="true"></i>
+            <i class="fa fa-video" aria-hidden="true"></i>
             Materiales visuales
           </label>
           <label>
@@ -160,7 +161,7 @@
           </label>
           <label>
             <input type="checkbox" value="recursoperiod">
-            <i class="fa fa-newspaper-o" aria-hidden="true"></i>
+            <i class="fa fa-newspaper" aria-hidden="true"></i>
             Recursos periodicos
           </label>
         </div>
@@ -172,7 +173,7 @@
           </label>
           <label>
             <input type="checkbox" value="reserva">
-            <i class="fa fa-bookmark-o" aria-hidden="true"></i>
+            <i class="fa fa-bookmark" aria-hidden="true"></i>
             Reserva
           </label>
           <label>
